Simplify the JSON to add a child and remove unused fields. (#330)
